[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cert-monitor"
version = "1.0.0"
description = "Production certificate expiration monitoring pipeline"
requires-python = ">=3.12"
dependencies = [
    # Async MongoDB driver
    "motor>=3.3.2",
    "pymongo>=4.6.3",

    # Data processing
    "polars>=0.20.15",
    "pyarrow>=15.0.0",          # parquet read/write backend for polars
    "numpy>=1.26.4",

    # Fuzzy matching
    "rapidfuzz>=3.6.1",

    # Settings / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",

    # CLI
    "typer>=0.12.3",

    # Utilities (stdlib in 3.12 but listed for clarity)
    # "python-dotenv" is handled by pydantic-settings natively
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.2",
    "mypy>=1.9.0",
]

[project.scripts]
cert-monitor = "src.batch.runner_cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
